--- a/styles_receipes2.css
+++ b/styles_receipes2.css
@@ -176,6 +176,24 @@ header {
   font-weight: bold;
 }
 
+/* Обработчик кнопки "Удалить" */
+.delete-button {
+  font-family: 'Pacifico', cursive;
+  margin-top: 10px;
+  padding: 8px 12px;
+  background-color: #e74c3c;
+  color: #ED2525;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.delete-button:hover {
+  background-color: #c0392b;
+}
+
+
 /* Стили подвала сайта */
 .footer {
   display: flex;
