--- a/styles_receipes2.css
+++ b/styles_receipes2.css
@@ -180,17 +180,18 @@ header {
 .delete-button {
   font-family: 'Pacifico', cursive;
   margin-top: 10px;
-  padding: 8px 12px;
-  background-color: #e74c3c;
-  color: #ED2525;
+  padding: 8px 16px;
+  background-color: #ED2525; /* как и в ссылках */
+  color: #fff;
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
 }
 
 .delete-button:hover {
-  background-color: #c0392b;
+  background-color: #b71c1c; /* темнее при наведении */
 }
 
 
